--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "bootstrap": "^5.2.0-beta1",
+    "react-bootstrap": "^2.4.0",
     "react-router-dom": "^6.3.0"
   }
 }
